styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: var(--font-family);
  color: var(--black);
  background-color: var(--background);
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

:root {
  --black: #3B434E;
  --gray-light: #EBEBEB;
  --gray--dark: #787D85;
  --white: white;
  --primary: #7653FC;
  --primary-hover: #5B32FB;
  --red: #FC836D;
  --green: #1DC37E;
  --green-light: #C8F8E4;
  --font-family: "Noto Sans Display", sans-serif;
  --background: #F5F6F8;
}

